--- a/src/compugraf-cadastropessoa-front/src/app/components/form-component/form-component.component.html
+++ b/src/compugraf-cadastropessoa-front/src/app/components/form-component/form-component.component.html
@@ -1,6 +1,6 @@
 <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
     <div class="bg-white py-8 px-6 shadow rounded-lg sm:px-10">
-        <form class="mb-0 space-y-6">
+        <form #pessoaForm="ngForm" (ngSubmit)="saveUser(pessoaForm.value)" class="mb-0 space-y-6">
             <div>
                 <label for="nome" 
                     class="block 
@@ -9,7 +9,8 @@
                        text-gray-700">Nome
                 </label>
 
-                <input type="text" id="nome" name="nome" required
+                <input ngModel
+                type="text" id="nome" name="nome" required
                 class="w-full
                      border 
                      border-gray-300 
@@ -28,7 +29,8 @@
                        text-gray-700">Sobrenome
                 </label>
 
-                <input type="text" id="sobrenome" name="sobrenome" required
+                <input ngModel
+                type="text" id="sobrenome" name="sobrenome" required
                 class="w-full
                      border 
                      border-gray-300 
@@ -47,7 +49,18 @@
                        text-gray-700">Nacionalidade
                 </label>
 
-                <select id="nacionalidade" name="nacionalidade" required
+                <input ngModel
+                type="text" id="nacionalidade" name="nacionalidade" required
+                class="w-full
+                     border 
+                     border-gray-300 
+                     px-3 py-2 rounded-lg
+                     shadow-sm 
+                     focus:outline-none
+                     focus:border-indigo-500
+                     focus:ring-1">
+
+                <!-- <select id="nacionalidade" name="nacionalidade" required
                     class="w-full
                      border 
                      border-gray-300 
@@ -61,7 +74,7 @@
                      <option value="Selecione uma opção"></option>
                      <option value="Selecione uma opção"></option>
                      <option value="Selecione uma opção"></option>
-                </select>
+                </select> -->
             </div>
 
             <div>
@@ -72,7 +85,8 @@
                        text-gray-700">Cep
                 </label>
 
-                <input type="text" id="cep" name="cep" required
+                <input ngModel
+                type="text" id="cep" name="cep" required
                 class="w-full
                      border 
                      border-gray-300 
@@ -91,7 +105,8 @@
                        text-gray-700">Estado
                 </label>
 
-                <input type="text" id="estado" name="estado" required
+                <input ngModel
+                type="text" id="estado" name="estado" required
                 class="w-full
                      border 
                      border-gray-300 
@@ -110,7 +125,8 @@
                        text-gray-700">Cidade
                 </label>
 
-                <input type="text" id="cidade" name="cidade" required
+                <input ngModel
+                type="text" id="cidade" name="cidade" required
                 class="w-full
                      border 
                      border-gray-300 
@@ -129,7 +145,8 @@
                        text-gray-700">Logradouro
                 </label>
 
-                <input type="text" id="logradouro" name="logradouro" required
+                <input ngModel
+                type="text" id="logradouro" name="logradouro" required
                 class="w-full
                      border 
                      border-gray-300 
@@ -148,7 +165,8 @@
                        text-gray-700">Email
                 </label>
 
-                <input type="email" id="email" name="email" required
+                <input ngModel
+                type="email" id="email" name="email" required
                 class="w-full
                      border 
                      border-gray-300 
@@ -167,7 +185,8 @@
                        text-gray-700">Telefone
                 </label>
 
-                <input type="tel" id="telefone" name="telefone" required
+                <input ngModel
+                type="tel" id="telefone" name="telefone" required
                 class="w-full
                      border 
                      border-gray-300 
@@ -176,6 +195,19 @@
                      focus:outline-none
                      focus:border-indigo-500
                      focus:ring-1">
+            </div>
+
+            <div class="flex justify-center items-center">
+                <button class="bg-indigo-500 
+                            px-4 py-1 
+                            rounded text-white
+                            hover:bg-indigo-600"> {{ !loading ? 'Salvar' : '' }}
+
+                 <svg *ngIf="loading"
+                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 animate-spin">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
+                 </svg>
+                 </button>
             </div>
             
         </form>
@@ -204,7 +236,8 @@
             </tr>
         </thead>
 
-        <tbody class="border-t-0 border-l-2 border-r-2 border-b-2 border-slate-800">
+        <tbody *ngIf="!loading"
+            class="border-t-0 border-l-2 border-r-2 border-b-2 border-slate-800">
             <tr
                 *ngFor="let pessoa of pessoas">
                 <td class="p-3 text-sm text-gray-700">{{ pessoa.id }}</td>
@@ -226,14 +259,25 @@
                     
                 <td>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" 
+                        (click)="getPessoa(pessoa.id)"
+                    />
                     </svg>
                 </td>
             </tr>
-
-            
-
-            
         </tbody>
+
+        <tbody *ngIf="loading">
+            <div role="status" class="max-w-sm animate-pulse">
+                <div class="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-48 mb-4"></div>
+                <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[360px] mb-2.5"></div>
+                <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 mb-2.5"></div>
+                <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[330px] mb-2.5"></div>
+                <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[300px] mb-2.5"></div>
+                <div class="h-2 bg-gray-200 rounded-full dark:bg-gray-700 max-w-[360px]"></div>
+                <span class="sr-only">Loading...</span>
+            </div>
+        </tbody>
+
     </table>
 </div>
