--- a/src/compugraf-cadastropessoa-front/src/app/components/form-component/form-component.component.html
+++ b/src/compugraf-cadastropessoa-front/src/app/components/form-component/form-component.component.html
@@ -42,6 +42,34 @@
             </div>
 
             <div>
+                <label for="cpf" 
+                    class="block 
+                       text-sm 
+                       font-medium 
+                       text-gray-700">Cpf
+                </label>
+
+                <input (blur)="getByCpf(this.pessoaForm.value.cpf)"
+                ngModel
+                type="text" id="cpf" name="cpf" required
+                class="w-full
+                     border 
+                     border-gray-300 
+                     px-3 py-2 rounded-lg
+                     shadow-sm 
+                     focus:outline-none
+                     focus:border-indigo-500
+                     focus:ring-1">
+            </div>
+
+            <span *ngIf="cpfExistente">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="red" class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m9-.75a9 9 0 11-18 0 9 9 0 0118 0zm-9 3.75h.008v.008H12v-.008z" />
+                </svg>                  
+                <strong>CPF Já Cadastrado</strong>
+            </span>
+
+            <div>
                 <label for="nacionalidade" 
                     class="block 
                        text-sm 
@@ -198,7 +226,7 @@
             </div>
 
             <div class="flex justify-center items-center">
-                <button class="bg-indigo-500 
+                <button [disabled]="cpfExistente" class="bg-indigo-500 
                             px-4 py-1 
                             rounded text-white
                             hover:bg-indigo-600"> {{ !loading ? 'Salvar' : '' }}
